# pico_main

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h
include/: 24LC16B_EEPROM.h  24LC16B_EEPROM_i2c.h  bme280.h  bme280_i2c.h  bmp180.h  bmp180_i2c.h  com_protocol.h  i2c_config.h  pico_rtc.h
src/: 24LC16B_EEPROM_i2c.c  24lc16b_eeprom.c  bme280.c  bme280_i2c.c  bmp180.c  bmp180_i2c.c  com_protocol.c  i2c_config.c  pico_rtc.c
